# nordtodo

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: TROUBLESHOOTING.md  USER_GUIDE.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  integrations.rs  mod.rs  preferences.rs  search.rs  tags.rs  tasks.rs  window.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/integrations/: adapter.rs  google.rs  microsoft.rs  mod.rs  oauth.rs
src-tauri/src/models/: integration.rs  mod.rs  preferences.rs  recurrence.rs  reminder.rs  sync.rs  tag.rs  task.rs
src-tauri/src/repositories/: mod.rs  preferences.rs  tag.rs  task.rs
src-tauri/src/services/: mod.rs  recurrence_service.rs  reminder_service.rs
src/components/layout/: AppShell.tsx  SlimModeBar.tsx  TopBar.tsx
src/components/ui/: DateTimePicker.tsx  EmptyState.tsx  OnboardingOverlay.tsx  TaskSkeleton.tsx  UndoToast.tsx
src/features/command-palette/: CommandPalette.tsx
src/features/settings/: SettingsPanel.tsx
src/features/sidebar/: Sidebar.tsx
src/features/tasks/: QuickAdd.tsx  TaskCard.tsx  TaskDetailPanel.tsx  TaskListHeader.tsx  TaskView.tsx
src/hooks/: useKeyboard.ts  usePreferences.ts  useTasks.ts
src/lib/: tauriApi.ts  utils.ts
src/store/: appStore.ts  index.ts  sidebarStore.ts  taskStore.ts  undoStore.ts  windowStore.ts
src/styles/: globals.css
src/test/: setup.ts  store.test.ts  utils.test.ts
src/types/: index.ts
